Fixed feature card text align, overflow on mobile

--- a/css/new_site.css
+++ b/css/new_site.css
@@ -150,6 +150,7 @@ img {
   padding: 1rem;
   background-color: unset;
   border: none;
+  text-align: left;
 }
 
 .features .card-img-top {
